<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2024 Samsung Electronics Co., Ltd. All rights reserved -->
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/list_layout_margin"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/card_view_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/list_item_padding"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bed_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_in_bed" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sleep_session_list"
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView
                android:id="@+id/duration_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_text"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/stages"
                    android:textStyle="bold"
                    android:text="@string/sleep_stages"/>

                <TextView
                    android:id="@+id/stage_awake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_margin_start"
                    android:layout_below="@+id/stages"
                    android:text="@string/stage_awake" />

                <TextView
                    android:id="@+id/stage_awake_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/stage_awake"
                    android:layout_below="@+id/stages"
                    android:layout_marginStart="@dimen/list_margin_start"
                    android:text="@string/no_data" />

                <TextView
                    android:id="@+id/stage_rem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_margin_start"
                    android:layout_below="@+id/stage_awake"
                    android:text="@string/stage_rem" />

                <TextView
                    android:id="@+id/stage_rem_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stage_awake"
                    android:layout_toEndOf="@+id/stage_rem"
                    android:layout_marginStart="@dimen/list_margin_start"
                    android:text="@string/no_data" />

                <TextView
                    android:id="@+id/stage_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_margin_start"
                    android:layout_below="@+id/stage_rem"
                    android:text="@string/stage_light"/>

                <TextView
                    android:id="@+id/stage_light_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stage_rem"
                    android:layout_toEndOf="@+id/stage_light"
                    android:layout_marginStart="@dimen/list_margin_start"
                    android:text="@string/no_data"/>

                <TextView
                    android:id="@+id/stage_deep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_margin_start"
                    android:layout_below="@+id/stage_light"
                    android:text="@string/stage_deep"/>

                <TextView
                    android:id="@+id/stage_deep_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stage_light"
                    android:layout_toEndOf="@+id/stage_deep"
                    android:layout_marginStart="@dimen/list_margin_start"
                    android:text="@string/no_data"/>

                <TextView
                    android:id="@+id/skin_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/list_margin_top"
                    android:textStyle="bold"
                    android:layout_below="@+id/stage_deep"
                    android:text="@string/skin_temp"/>

                <TextView
                    android:id="@+id/min_max_skin_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_margin_start"
                    android:layout_below="@+id/skin_temp"
                    android:text="@string/min_max"/>

                <TextView
                    android:id="@+id/min_skin_temp_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/min_max_skin_temp"
                    android:layout_below="@+id/skin_temp"
                    android:layout_marginStart="@dimen/list_margin_start"
                    android:text="@string/no_data"/>

                <TextView
                    android:id="@+id/slash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/min_skin_temp_value"
                    android:layout_below="@+id/skin_temp"
                    android:layout_marginStart="@dimen/list_margin_start"
                    android:text="@string/slash"/>

                <TextView
                    android:id="@+id/max_skin_temp_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/slash"
                    android:layout_below="@+id/skin_temp"
                    android:layout_marginStart="@dimen/list_margin_start"
                    android:text="@string/no_data" />

                <TextView
                    android:id="@+id/oxygen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_below="@+id/min_max_skin_temp"
                    android:text="@string/oxygen"/>

                <TextView
                    android:id="@+id/min_max_oxygen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_margin_start"
                    android:layout_below="@+id/oxygen"
                    android:text="@string/min_max"/>

                <TextView
                    android:id="@+id/min_oxygen_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/min_max_oxygen"
                    android:layout_below="@+id/oxygen"
                    android:layout_marginStart="@dimen/list_margin_start"
                    android:text="@string/no_data"/>

                <TextView
                    android:id="@+id/oxygen_slash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/min_oxygen_value"
                    android:layout_below="@+id/oxygen"
                    android:layout_marginStart="@dimen/list_margin_start"
                    android:text="@string/slash"/>

                <TextView
                    android:id="@+id/max_oxygen_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/oxygen_slash"
                    android:layout_below="@+id/oxygen"
                    android:layout_marginStart="@dimen/list_margin_start"
                    android:text="@string/no_data" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>