<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2024 Samsung Electronics Co., Ltd. All rights reserved -->
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/list_layout_margin"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/card_view_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_view_margin"
            android:layout_marginStart="@dimen/layout_margin_start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <TextView
                android:id="@+id/heart_rate_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_view_margin"
                android:layout_marginStart="@dimen/layout_margin_start"
                android:layout_marginEnd="@dimen/layout_margin_end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/heart_rate_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_text"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/heart_rate_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/list_margin_start"
                    android:textSize="@dimen/list_text_size"
                    android:text="@string/heart_rate_unit"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/min_heart_rate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/min_heart_rate"/>

                        <TextView
                            android:id="@+id/min_heart_rate_value"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/list_margin_start"
                            android:text="@string/no_data" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/max_heart_rate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/max_heart_rate" />

                        <TextView
                            android:id="@+id/max_heart_rate_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/list_margin_start"
                            android:text="@string/no_data" />

                    </LinearLayout>
            </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
