<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2024 Samsung Electronics Co., Ltd. All rights reserved -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_smoke"
        android:padding="@dimen/padding"
        android:orientation="vertical"
        tools:context=".activity.HealthMainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/card_view_radius">

            <LinearLayout
                android:id="@+id/bt_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_layout_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/image_layout_width"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_steps"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_margin_start"
                    android:text="@string/steps"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_sleep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_view_margin_top"
            app:cardCornerRadius="@dimen/card_view_radius">

            <LinearLayout
                android:id="@+id/bt_sleep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_layout_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/image_layout_width"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_sleep"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_margin_start"
                    android:text="@string/sleep"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_nutrition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_view_margin_top"
            app:cardCornerRadius="@dimen/card_view_radius">

            <LinearLayout
                android:id="@+id/bt_nutrition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_layout_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/image_layout_width"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_nutrition"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_margin_start"
                    android:text="@string/nutrition"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_heart_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_view_margin_top"
            app:cardCornerRadius="@dimen/card_view_radius">

            <LinearLayout
                android:id="@+id/bt_heart_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_layout_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/image_layout_width"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_heart_rate"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_margin_start"
                    android:text="@string/heart_rate_heading"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>